# Gugumoe-bot

./: .gitignore  README.md  almanac.py  bot.py  bot.yaml  bot3.py  cloudmusic.py  config.yml  gacha.py  gachacz.py  generator.py  guip.py  hhsh.py  jrrp.py  main.py  make_img.py  osu.py  pool_data.py  pyproject.toml  requirements.txt  st.py  test.py
.github/workflows/: docker-image.yml
deploy/: Dockerfile
doc/: Plugins-DEV.md
genshin/data/: name.json
gugumoe_bot/: __main__.py  plugin_interface.py  settings.py
gugumoe_bot/db/: mongodb_helper.py
gugumoe_bot/plugins/: 60s.py  buttons.py  echo.py  jrrp.py  nexttrace.py
gugumoe_bot/utils/: nexttrace_helper.py  nslookup_helper.py  redis_helper.py
invalidate/: nexttrace.py
query_resource_points/: teet.py
tests/: mongodb_test.py
user/jrrp/: 1268253523.json  1278988193.json  1431873495.json  1567767968.json  1962839356.json  786563752.json
user/ycxt/: 1135779499.json  1268253523.json  1949132537.json  910479915.json
